...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="P" />

        <com.rowland.kokokeyboard.keys.RectangularKeyView
            android:id="@+id/key_backspace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="⌫"
            app:is_special_key="true"
            app:special_key_code="backspace"
...
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.rowland.kokokeyboard.keys.RectangularKeyView
            android:id="@+id/key_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="SPACE"
            app:is_special_key="true"
            app:special_key_code="space"
...
