<?xml version="1.0" encoding="utf-8"?>
<com.rowland.kokokeyboard.layouts.KeyboardWrapperLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/keyboard_wrapper_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <com.rowland.kokokeyboard.layouts.KeyBoardRowLayout
        android:id="@+id/keyboard_row_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.rowland.kokokeyboard.keys.SquareKeyView

            android:id="@+id/key_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="2" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_six"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="6" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_seven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="7" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_eight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="8" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_nine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="9" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </com.rowland.kokokeyboard.layouts.KeyBoardRowLayout>

    <com.rowland.kokokeyboard.layouts.KeyBoardRowLayout
        android:id="@+id/keyboard_qwerty_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_q"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Q" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_w"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="W" />


        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_e"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="E" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="R" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_t"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="T" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Y" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_u"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="U" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_i"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="I" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_o"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="O" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_p"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="P" />

        <com.rowland.kokokeyboard.keys.RectangularKeyView
            android:id="@+id/key_backspace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="⌫"
            app:is_special_key="true"
            app:screen_width_percent="0.3"
            app:special_key_code="backspace" />

    </com.rowland.kokokeyboard.layouts.KeyBoardRowLayout>

    <com.rowland.kokokeyboard.layouts.KeyBoardRowLayout
        android:id="@+id/keyboard_qwerty_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="A" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_s"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="S" />


        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="D" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_f"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="F" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_g"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="G" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_h"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="H" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_j"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="J" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_k"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="K" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_l"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="L" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

    </com.rowland.kokokeyboard.layouts.KeyBoardRowLayout>

    <com.rowland.kokokeyboard.layouts.KeyBoardRowLayout
        android:id="@+id/keyboard_qwerty_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Z" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="X" />


        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="C" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_v"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="V" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="B" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_n"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="N" />

        <com.rowland.kokokeyboard.keys.SquareKeyView
            android:id="@+id/key_m"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="M" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </com.rowland.kokokeyboard.layouts.KeyBoardRowLayout>

    <com.rowland.kokokeyboard.layouts.KeyBoardRowLayout
        android:id="@+id/keyboard_qwerty_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.rowland.kokokeyboard.keys.RectangularKeyView
            android:id="@+id/key_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="SPACE"
            app:is_special_key="true"
            app:screen_width_percent="0.60"
            app:special_key_code="space" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </com.rowland.kokokeyboard.layouts.KeyBoardRowLayout>


</com.rowland.kokokeyboard.layouts.KeyboardWrapperLayout>

